--- a/src/pages/VideoPage/components/index.css
+++ b/src/pages/VideoPage/components/index.css
@@ -1,14 +1,40 @@
-.vjs-marker-bar {
-  position: relative;
+/* .vjs-marker-bar { */
+
+/* position: relative;
   padding: 0 10px;
   width: 100px;
   height: 100%;
   display: flex;
   align-items: center;
-}
+} */
 
-.vjs-marker-bar-demo {
+/* .vjs-marker-bar-demo {
   width: 100%;
   height: 10px;
   background-color: red;
+} */
+
+.vjs-marker-bar {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.vjs-marker-point {
+  position: absolute;
+  width: 0.3em;
+  height: 0.3em;
+  background: red;
+  left: -0.15em;
+  border-radius: 0.3em;
+}
+
+.vjs-marker-point-tip {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  font-size: 12px;
+  text-align: left;
+  width: 300px;
+  height: 0;
 }
