--- a/src/pages/VideoPage/components/index.css
+++ b/src/pages/VideoPage/components/index.css
@@ -18,23 +18,26 @@
   position: relative;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 .vjs-marker-point {
   position: absolute;
+  z-index: 1;
   width: 0.3em;
   height: 0.3em;
   background: red;
   left: -0.15em;
   border-radius: 0.3em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.vjs-marker-point-tip {
-  position: absolute;
-  left: 50%;
-  top: 0;
-  font-size: 12px;
-  text-align: left;
-  width: 300px;
-  height: 0;
+.vjs-marker-bubble {
+  /* position: absolute; */
+  width: 1em;
+  height: 1em;
+  background: yellow;
+  border-radius: 1em;
 }
