--- a/src/pages/VideoPage/components/index.css
+++ b/src/pages/VideoPage/components/index.css
@@ -27,17 +27,27 @@
   width: 0.3em;
   height: 0.3em;
   background: red;
-  left: -0.15em;
-  border-radius: 0.3em;
-  display: flex;
+  /* left: -0.15em; */
+  /* display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: center; */
 }
 
 .vjs-marker-bubble {
-  /* position: absolute; */
-  width: 1em;
-  height: 1em;
-  background: yellow;
-  border-radius: 1em;
+  position: absolute;
+  top: -0.15em;
+  width: 0.6em;
+  height: 0.6em;
+  background: rgba(0, 255, 0, 0.8);
+  border-radius: 0.6em;
+}
+
+.vjs-marker-bubble.left {
+  left: -0.3em;
+  /* transform: translateX(-0.3em); */
+}
+
+.vjs-marker-bubble.right {
+  right: -0.3em;
+  /* transform: translateX(0.3em); */
 }
